src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@font-face {
  font-family: "Open Sans";
  src: url("../public/assets/fonts/OpenSans/OpenSans-Regular.woff2")
    format("woff2");
  font-weight: 400;
  font-style: normal;
}
@font-face {
  font-family: "Open Sans";
  src: url("../public/assets/fonts/OpenSans/OpenSans-SemiBold.woff2")
    format("woff2");
  font-weight: 600;
  font-style: normal;
}
@font-face {
  font-family: "Open Sans";
  src: url("../public/assets/fonts/OpenSans/OpenSans-Bold.woff2")
    format("woff2");
  font-weight: 700;
  font-style: normal;
}

*{
  font-family: "Open Sans", sans-serif, Arial !important;
}

body {
  font-family: "Open Sans", sans-serif, Arial ;
  font-weight: 400;
  background-color: #f2f5f8;
}

/* Thin scrollbar styles */
.thin-scrollbar {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
}

.thin-scrollbar::-webkit-scrollbar {
  width: 6px;
}

.thin-scrollbar::-webkit-scrollbar-track {
  background: transparent;
}

.thin-scrollbar::-webkit-scrollbar-thumb {
  background: transparent;
  border-radius: 3px;
}

.thin-scrollbar::-webkit-scrollbar-thumb:hover {
  background: rgba(148, 163, 184, 0.3);
}


/* customizations */

.cls-sending-status{
  top: 0;
  position: absolute;
  z-index: 50;
  font-size: 14px;
  left: calc(50% - 48px);
  background: antiquewhite;
  border: 1px solid darkorange;
  padding: 10px;
}

.cls-indent-count {
  /* padding: 2px 6px;
  border-radius: 50%;
  width: fit-content;
  height: fit-content;
  background: red; */
  margin-left: auto;
  font-size: 10px;
}

.cls-active-status {
  position: relative;
  &::after{
    content:"";
    position:absolute;
    border-top:20px solid #16a34a;
    border-bottom: 20px solid transparent;
    border-left: 20px solid transparent;
    top: 0px;
    right: 0px;
  }
}

.html-content div{
  width : 100% !important;
  overflow: auto !important
}
.html-content{
  width : 100% !important;
  overflow: auto !important
}
.html-content div {
  scrollbar-width: thin !important;
  scrollbar-color: #0e2071 #fd9646 !important;
}

.html-content {
  scrollbar-width: thin !important;
  scrollbar-color: #0e2071 #fd9646 !important;
}

